--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "ejs": "~2.2.3",
-    "ejs-locals": "*",
+    "ejs-locals": "^1.0.2",
     "express": "~4.11.1",
     "forever-monitor": "^1.5.2",
+    "jquery": "^2.1.3",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-stylus": "^0.20.0",
     "grunt-contrib-watch": "^0.6.1",
     "supervisor": "~0.6.0"
   }
