--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
   "homepage": "http://www.jimubox.com",
   "author": "Le Rong Duo Yuan (Beijing) technology Ltd,.co.",
   "css": "dist/css/anole.css",
+  "js": "dist/js/anole.js",
   "stylus": "stylus/anole.stylus",
   "repository": {
     "type": "git",
-    "url": "git@git.jimubox.com:zhangjiesi/anole.git"
+    "url": "git@github.com:Jesszh/anole.git"
+  },
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/Jesszh/anole/blob/master/LICENSE"
   },
   "private": true,
   "scripts": {
