--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "forever-monitor": "^1.5.2",
     "jquery": "^2.1.3",
     "morgan": "~1.5.1",
+    "nib": "^1.1.0",
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
