--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "grunt-contrib-stylus": "^0.20.0",
     "grunt-contrib-watch": "^0.6.1",
     "gulp": "^3.8.11",
+    "gulp-header": "^1.2.2",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-stylus": "^2.0.1",
     "supervisor": "~0.6.0"
